Practiced single and paired HTML tags

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
       веб-разметки.
     </p>
     <img src="https://google.com" />
+    <hr />
+    <p>Лаба 5 Беляев Селиванов</p>
+    <img
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtiFdA4WG6HV4PYqx6Ipq_7EMOEsKybzzU1w&s"
+      alt="абу"
+    />
   </body>
 </html>
