--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtiFdA4WG6HV4PYqx6Ipq_7EMOEsKybzzU1w&s"
       alt="абу"
     />
+    <h2>Это подзаголовок</h2>
+    <h3>Подраздел</h3>
+    <p>Это обычный абзац текста.</p>
+    <p>Это <strong>очень важная</strong>фраза.</p>
+    <p>Это <em>курсивный</em> текст.</p>
+    <p>Линия 1<br />Линия 2</p>
+    <hr />
+    <p><a href="https://google.com">Перейти на Google</a></p>
+    <p><img src="ex.png" alt="Картинка не загрузилась" /></p>
+    <h2>Базовые HTML-теги</h2>
+    <p>
+      HTML позволяет <strong>выделять</strong> текст и делать <em>акценты</em>.
+    </p>
+    <hr />
+    <p><a href="https://github.com/s0m1k111">Мой GitHub</a></p>
+    <p>
+      <img
+        src="img/htmlPageLab5_Belyaev_Selivanov.png"
+        alt="Пример изображения"
+      />
+    </p>
   </body>
 </html>
