--- a/index.html
+++ b/index.html
@@ -39,5 +39,60 @@
         alt="Пример изображения"
       />
     </p>
+
+    <ol>
+      <li>Первый пункт</li>
+      <li>Второй пункт</li>
+      <li>Третий пункт</li>
+    </ol>
+
+    <ul>
+      <li>Элементы списка</li>
+      <li>Ещё один элемент</li>
+    </ul>
+
+    <ul>
+      <li>
+        Пункт 1
+        <ol>
+          <li>Элементы списка</li>
+          <li>Ещё один элемент</li>
+        </ol>
+      </li>
+    </ul>
+
+    <h2>Мои списки</h2>
+    <ol>
+      <li>Фишер</li>
+      <li>Метод</li>
+      <li>Отряд Альфа</li>
+    </ol>
+    <ul>
+      <li>Компьютер</li>
+      <li>Приставка</li>
+      <li>Машина</li>
+    </ul>
+    <ul>
+      <li>
+        Домашние дела
+        <ul>
+          <li>Уборка</li>
+          <li>Комп</li>
+        </ul>
+      </li>
+      <li>
+        Отдых
+        <ul>
+          <li>Посмотреть фильм</li>
+        </ul>
+      </li>
+      <li>
+        Учеба
+        <ul>
+          <li>Повторить HTML</li>
+        </ul>
+      </li>
+    </ul>
+    
   </body>
 </html>
