Added image gallery and gallery screenshot

--- a/index.html
+++ b/index.html
@@ -149,5 +149,18 @@
     <br /><br />
 
     <input type="text" placeholder="Введите ваш город" />
+
+    <h2>Галерея</h2>
+    <p>
+      <img
+        src="https://craftology.ru/upload/resize_cache/iblock/1b5/370_370_2/1b58182f0237828ae2f1161d2538d122.jpg"
+        alt="Изображение"
+      />
+    </p>
+    <p>
+      <img src="img/attributesLab5_Selivanov_Belyaev.png" alt="Изображение" />
+    </p>
+    <p><img src="" alt="Изображение" /></p>
+    <a href="#" title="заглушка">Нажми</a>
   </body>
 </html>
