--- a/index.html
+++ b/index.html
@@ -162,5 +162,43 @@
     </p>
     <p><img src="" alt="Изображение" /></p>
     <a href="#" title="заглушка">Нажми</a>
+
+    <h1>Таблица в HTML</h1>
+    <table border="1">
+        <tr>
+          <th>Имя</th>
+          <th>Возраст</th>
+        </tr>
+        <tr>
+          <th>Алексей</th>
+          <th>21</th>
+        </tr>
+        <tr>
+          <th>Мария</th>
+          <th>19</th>
+        </tr>
+    </table>
+    <h2>Информация обо мне</h2>
+    <table border="1">
+        <tr>
+          <th>Имя</th>
+          <th>Возраст</th>
+          <th>Любимый язык программирования
+</th>
+          <th>Город</th>
+        </tr>
+        <tr>
+          <th>Селиванов Павел Алексеевич</th>
+          <th>ИСП 233</th>
+          <th>нету</th>
+          <th>Волжский</th>
+        </tr>
+        <tr>
+          <th>Беляев Владимир Александр</th>
+          <th>ИСП 233</th>
+          <th>нету</th>
+          <th>Волжский</th>
+        </tr>
+    </table>
   </body>
 </html>
