--- a/index.html
+++ b/index.html
@@ -200,5 +200,29 @@
           <th>Волжский</th>
         </tr>
     </table>
+    <h2>Формы</h2>
+    <form>
+        <label for="username">Имя:</label>
+        <input id="username" type="text" placeholder="Введите имя">
+        <br><br>
+
+        <label for="email">Email:</label>
+        <input id="email" type="email" placeholder="example@mail.com">
+        <br><br>
+
+        <label for="city">Город:</label>
+        <select id="city">
+            <option>Волгоград</option>
+            <option>Волжский</option>
+            <option>Камышин</option>
+        </select>
+        <br><br>
+
+        <label for="message">Сообщение:</label>
+        <textarea id="message" rows="4" placeholder="Напишите текст..."></textarea>
+        <br><br>
+
+        <button type="submit">Отправить</button>
+    </form>
   </body>
 </html>
